--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/main.css">
-    <script type="text/javascript" src="js/main.js"></script>
+    <link rel="stylesheet" href="/css/main.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <script type="text/javascript" src="/js/main.js"></script>
+    <!-- <script type="text/javascript" src="/js/content-manager.js"></script> -->
 
     <title>ChatBox</title>
 </head>
@@ -16,18 +19,17 @@
     <script srd="/socket.io/socket.io.js"></script>
     <div id="app-container">
         <h1 id="title">ChatBox</h1>
-        <div id="ui-container">
-            <div id="message-container">
-            </div>
-            <div id="send-message-container">
-                <form id="send-message-form">
-                    <input id="send-message-input"
-                           type="text" 
-                           placeholder="enter message" 
-                           autocomplete="off" />
-                    <button id="send-button">SEND</button>
-                </form>
-            </div>
+        <div id="content">
+            <!-- <script type="text/javascript" src="/js/main.js"></script>
+            <div id="chat-container">
+                <div id="messages-container"></div>
+                <div id="send-container">
+                    <form id="send-form">
+                        <input id="send-input" type="text" placeholder="enter message" autocomplete="off" />
+                        <button id="send-button">SEND</button>
+                    </form>
+                </div>
+            </div> -->
         </div>
     </div>
 </body>
