--- a/src/public/index.html
+++ b/src/public/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="/js/main.js"></script>
 
 
-    <title>ChatBox</title>
+    <title>CatBox</title>
 </head>
 
 <body class="bg-bluestrong">
