Create svg title and colour scheme

--- a/src/public/static/content/_join.html
+++ b/src/public/static/content/_join.html
@@ -1,7 +1,8 @@
-<div id="" class="container join-container bg-light2">
+<div class="container join-container bg-light3">
     <form id="join-form">
-        <input id="text-input" class="bg-light1 fg-light2 chat-text shadow" autocomplete="off" placeholder="enter username"
+        <input id="join-input" class="bg-light2 fg-light1 chat-text shadow full-height-width" 
+                autocomplete="off" placeholder="enter username"
             type="text" autofocus />
-        <button id="send-button" class="bg-highlight fg-light1 shadow">SEND</button>
+        <button id="send-button" class="bg-light4 fg-light1  shadow">SEND</button>
     </form>
 </div>
