Responsive layout: auto fill available height.

--- a/src/public/main.html
+++ b/src/public/main.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link href="/favicon.ico" rel="shortcut icon" type="image/jpg" />
 
     <link href="https://fonts.gstatic.com" rel="preconnect">
@@ -25,37 +25,37 @@
 </head>
 
 <body class="bg-light1">
-    <header>
-        <!-- <h1 class="fg-light4"><svg xmlns="http://www.w3.org/2000/svg">
+    <div class="flex-container">
+        <header>
+            <svg class="fg-light4 title-height" viewBox="0 0 181.891 52.247" xmlns="http://www.w3.org/2000/svg">
                 <use href="#cat" />
             </svg>
-        </h1> -->
-        <svg viewBox="0 0 181.891 52.247" xmlns="http://www.w3.org/2000/svg" 
-            class="fg-light4 title-height">
-            <use href="#cat" />
-        </svg>
-    </header>
-    <section id="ajax-content" class="main-content"></section>
-    <footer class="fg-light4">Marc de Garis 2021</footer>
+        </header>
+        <section id="ajax-content" class="main-content"></section>
+        <footer class="fg-light4">Marc de Garis 2021</footer>
+    </div>
+
+    <svg class="def-only" viewBox="0 0 181.891 52.247" xmlns="http://www.w3.org/2000/svg">
+        <symbol id="cat">
+            <g>
+                <text stroke-width="0.5" stroke="black" y="50.039" x="-3.789" font-family="Uroob" font-size="80"
+                    style="-inkscape-font-specification:'Uroob, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-east-asian:normal"
+                    font-weight="400">
+                    C
+                </text>
+                <path stroke-width="1.5" stroke="black"
+                    d="M44.183 24.134a23.887 23.887 0 00-3.439 1.798c-3.531-2.204-10.693-5.017-12.574-2.854-1.84 2.115 1.993 9.427 4.79 12.519-.655 2.215-.616 4.511.439 7.002l-3.657 1.547c-.688.291-.972 1.173-.613 2.021.36.849 1.19 1.26 1.878.968l4.259-1.802c.186-.079.691.493 1.14.818l-4.066 3.395c-.608.533-.664 1.431-.057 2.124.607.693 1.55.756 2.158.223.205-.18 4.77-4.186 4.95-4.39 4 1.413 9.218 1.197 14.28-.945 5.062-2.142 8.847-5.742 10.619-9.598.273.013 6.32-.483 6.594-.504.807-.065 1.41-.802 1.337-1.72-.075-.918-.773-1.535-1.58-1.47l-5.24.616c.08-.548.02-1.31.206-1.388l4.259-1.802c.688-.291.972-1.173.613-2.021-.36-.849-1.19-1.26-1.878-.968l-3.657 1.547c-1.053-2.491-2.673-4.117-4.72-5.19-.271-4.16-2.824-11.94-5.624-12.093-2.861-.155-5.842 6.913-6.72 10.983-1.224.295-2.472.666-3.697 1.185zm-1.679 15.851a2.697 2.697 0 11-2.102-4.967 2.697 2.697 0 012.102 4.967zm10.69-7.452a2.697 2.697 0 114.967-2.1 2.697 2.697 0 01-4.967 2.1z" />
+                <text stroke-width="0.5" stroke="black" y="50.039" x="67.633" font-family="Uroob" font-size="80"
+                    style="-inkscape-font-specification:'Uroob, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-east-asian:normal"
+                    font-weight="400">
+                    <tspan x="67.633" y="50.039"
+                        style="-inkscape-font-specification:'Uroob, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-east-asian:normal">
+                        tBox</tspan>
+                </text>
+            </g>
+        </symbol>
+    </svg>
+
 </body>
-<svg viewBox="0 0 181.891 52.247" xmlns="http://www.w3.org/2000/svg" class="def-only">
-    <symbol id="cat">
-    <g>
-        <text stroke-width="0.5" stroke="black" y="50.039" x="-3.789" font-family="Uroob" font-size="80"
-            style="-inkscape-font-specification:'Uroob, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-east-asian:normal"
-            font-weight="400">
-            C
-        </text>
-        <path stroke-width="1.5" stroke="black"
-            d="M44.183 24.134a23.887 23.887 0 00-3.439 1.798c-3.531-2.204-10.693-5.017-12.574-2.854-1.84 2.115 1.993 9.427 4.79 12.519-.655 2.215-.616 4.511.439 7.002l-3.657 1.547c-.688.291-.972 1.173-.613 2.021.36.849 1.19 1.26 1.878.968l4.259-1.802c.186-.079.691.493 1.14.818l-4.066 3.395c-.608.533-.664 1.431-.057 2.124.607.693 1.55.756 2.158.223.205-.18 4.77-4.186 4.95-4.39 4 1.413 9.218 1.197 14.28-.945 5.062-2.142 8.847-5.742 10.619-9.598.273.013 6.32-.483 6.594-.504.807-.065 1.41-.802 1.337-1.72-.075-.918-.773-1.535-1.58-1.47l-5.24.616c.08-.548.02-1.31.206-1.388l4.259-1.802c.688-.291.972-1.173.613-2.021-.36-.849-1.19-1.26-1.878-.968l-3.657 1.547c-1.053-2.491-2.673-4.117-4.72-5.19-.271-4.16-2.824-11.94-5.624-12.093-2.861-.155-5.842 6.913-6.72 10.983-1.224.295-2.472.666-3.697 1.185zm-1.679 15.851a2.697 2.697 0 11-2.102-4.967 2.697 2.697 0 012.102 4.967zm10.69-7.452a2.697 2.697 0 114.967-2.1 2.697 2.697 0 01-4.967 2.1z" />
-        <text stroke-width="0.5" stroke="black" y="50.039" x="67.633" font-family="Uroob" font-size="80"
-            style="-inkscape-font-specification:'Uroob, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-east-asian:normal"
-            font-weight="400">
-            <tspan x="67.633" y="50.039"
-                style="-inkscape-font-specification:'Uroob, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-east-asian:normal">
-                tBox</tspan>
-        </text>
-    </g>
-</symbol>
-</svg>
+
 </html>
