--- a/src/public/static/content/_chat.html
+++ b/src/public/static/content/_chat.html
@@ -1,14 +1,12 @@
-<div id="chat-fragment" class="container chat-container bg-light3">
-    <div id="messages-container" class="bg-light2 fg-light1 shadow">
-        <ul id="message-list" class="bg-light2 chat-text">
-        </ul>
-    </div>
-    <div id="send-container">
+<div class="flex-container basic-container border-rnd-full bg-light3">
+    <ul id="message-list" 
+        class="full-hw chat-text messages-container shadow border-rnd-full bg-light2 fg-light1"></ul>
+    <div class="send-container full-w">
         <form id="send-form">
-            <input autofocus id="send-input" 
-                    class="bg-light2 fg-light1 chat-text shadow full-height-width" 
-                    autocomplete="off" placeholder="enter message" type="text" >
-            <button id="send-button" class="bg-light4 fg-light1 shadow">SEND</button>
+            <input id="send-input" 
+                   class="chat-text shadow border-rnd-left full-hw bg-light2 fg-light1"
+                autofocus autocomplete="off" placeholder="enter message" type="text">
+            <button id="send-button" class="send-button bg-light4 fg-light1 shadow border-rnd-right">SEND</button>
         </form>
     </div>
 </div>
