--- a/src/public/static/content/_join.html
+++ b/src/public/static/content/_join.html
@@ -1,8 +1,10 @@
-<div class="container join-container bg-light3">
-    <form id="join-form">
-        <input id="join-input" class="bg-light2 fg-light1 chat-text shadow full-height-width" 
-                autocomplete="off" placeholder="enter username"
-            type="text" autofocus />
-        <button id="send-button" class="bg-light4 fg-light1  shadow">SEND</button>
+
+
+
+<div class="basic-container border-rnd-full bg-light3">
+    <form id="join-form" class="full-w">
+        <input id="join-input" class="bg-light2 fg-light1 chat-text shadow border-rnd-left full-hw"
+            autocomplete="off" placeholder="enter username" type="text" autofocus />
+        <button id="send-button" class="bg-light4 fg-light1 shadow border-rnd-right">SEND</button>
     </form>
 </div>
