templating, register, login, database work

--- a/src/public/static/content/_join.html
+++ b/src/public/static/content/_join.html
@@ -1,9 +1,9 @@
 
 
 
-<div class="basic-container border-rnd-full bg-light3">
-    <form id="join-form" class="full-w">
-        <input id="join-input" class="bg-light2 fg-light1 chat-text shadow border-rnd-left full-hw"
+<div class="base-container container-med-w border-rnd-full bg-light3">
+    <form id="join-form" class="full-w flex-row-container">
+        <input id="join-input" class="bg-light2 fg-light1 input-text shadow border-rnd-left full-w"
             autocomplete="off" placeholder="enter username" type="text" autofocus />
         <button id="send-button" class="bg-light4 fg-light1 shadow border-rnd-right">SEND</button>
     </form>
