--- a/src/public/login.html
+++ b/src/public/login.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Login</title>
 </head>
 <body>
     <div>
         <form method="POST">
             <label>Email:</label><input name="email" type="text" autocomplete="off" />
             <label>Password:</label><input name="password" type="password" autocomplete="off" />
-            <button>register</button>
+            <button>login</button>
         </form>
     </div>
 </body>
