--- a/src/public/main.html
+++ b/src/public/main.html
@@ -11,8 +11,7 @@
     <link rel="alternate icon" href="/favicon.ico">
 
     <link href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&family=Roboto&family=Lexend+Zetta&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&family=Roboto&family=Lexend+Zetta&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://use.typekit.net/rsd0ewu.css">
@@ -25,15 +24,15 @@
     <title>CatBox</title>
 </head>
 
-<body class="bg-light1">
+<body class="bg-clr1">
     <div class="flex-col-container">
         <header>
-            <svg class="fg-light4 title-height" viewBox="0 0 181.891 52.247" xmlns="http://www.w3.org/2000/svg">
+            <svg class="fg-clr4 title-height" viewBox="0 0 181.891 52.247" xmlns="http://www.w3.org/2000/svg">
                 <use href="#cat" />
             </svg>
         </header>
         <section id="page-content" class="main-content"></section>
-        <footer class="fg-light4">Marc de Garis 2021</footer>
+        <footer class="fg-clr4">Marc de Garis 2021</footer>
     </div>
 
     <svg class="def-only" viewBox="0 0 181.891 52.247" xmlns="http://www.w3.org/2000/svg">
