--- a/src/public/static/content/_chat.html
+++ b/src/public/static/content/_chat.html
@@ -1,12 +1,9 @@
-<div class="flex-col-container base-container container-large-w border-rnd-full bg-light3">
-    <ul id="message-list"
-        class="full-hw input-text messages-container shadow border-rnd-full bg-light2 fg-light1"></ul>
+<div class="flex-col-container base-container container-large-w border-rnd-full bg-clr3">
+    <ul id="message-list" class="full-hw input-text messages-container shadow border-rnd-full bg-clr2 fg-clr1"></ul>
     <div class="send-container full-w">
         <form id="send-form">
-            <input id="send-input"
-                   class="input-text shadow border-rnd-left full-hw bg-light2 fg-light1"
-                autofocus autocomplete="off" placeholder="enter message" type="text">
-            <button id="send-button" class="send-button bg-light4 fg-light1 shadow border-rnd-right">SEND</button>
+            <input id="send-input" class="input-text shadow border-rnd-left full-hw bg-clr2 fg-clr1" autofocus autocomplete="off" placeholder="enter message" type="text">
+            <button id="send-button" class="send-button bg-clr4 fg-clr1 shadow border-rnd-right">SEND</button>
         </form>
     </div>
 </div>
