--- a/src/public/static/content/_join.html
+++ b/src/public/static/content/_join.html
@@ -1,10 +1,6 @@
-
-
-
-<div class="base-container container-med-w border-rnd-full bg-light3">
+<div class="base-container container-med-w border-rnd-full bg-clr3">
     <form id="join-form" class="full-w flex-row-container">
-        <input id="join-input" class="bg-light2 fg-light1 input-text shadow border-rnd-left full-w"
-            autocomplete="off" placeholder="enter username" type="text" autofocus />
-        <button id="send-button" class="bg-light4 fg-light1 shadow border-rnd-right">SEND</button>
+        <input id="join-input" class="bg-clr2 fg-clr1 input-text shadow border-rnd-left full-w" autocomplete="off" placeholder="enter username" type="text" autofocus />
+        <button id="send-button" class="bg-clr4 fg-clr1 shadow border-rnd-right">SEND</button>
     </form>
 </div>
